test/manual/assignment/errors/invalid_assignment_block.sol
// Attempting to assign to a block expression
{ val a = 1; a; } = 2;